suppression de l'attribut SameSite

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <!-- script d'apparition et de disparition des boutons "lecture" et "pause" à tour de rôle dans le diaporama --> 
-        <script src="https://kit.fontawesome.com/61e34a719d.js" crossorigin="anonymous" SameSite="none Secure"></script>
+        <script src="https://kit.fontawesome.com/61e34a719d.js" crossorigin="anonymous"></script>
         
         <!-- cdn bootstrap .css -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
