Ajout de commentaires

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     
     <head>
        
+       <!-- on spécifie l'encodage des caractères pour le document HTML: -->
         <meta charset="utf-8"/>
 
         <!-- Un élément de fenêtre <meta> donne au navigateur des instructions sur la façon de contrôler les dimensions et la mise à l'échelle de la page. La partie width=device-width définit la largeur de la page pour suivre la largeur d'écran de l'appareil (qui variera selon l'appareil). La partie initial-scale=1.0 définit le niveau de zoom initial lors du premier chargement de la page par le navigateur. -->
